feat: add exercises with solutions

--- a/simulation-environment-entrypoint.yml
+++ b/simulation-environment-entrypoint.yml
@@ -20,7 +20,7 @@ deployments:
 monitors:
   type: SwingGUI
   parameters:
-    graphics: effects.json
+    graphics: entrypoint.json
 
 launcher:
   auto-start: false
