--- a/simulation-environment-basicExercises.yml
+++ b/simulation-environment-basicExercises.yml
@@ -9,7 +9,7 @@ _pool: &program
     type: Event
     actions:
       - type: RunCollektiveProgram
-        parameters: [collektive.exercises.BasicExercisesKt.networkDiameter]
+        parameters: [collektive.exercises.BasicExercisesKt.distanceToSource]
 
 deployments:
   - type: GraphStreamDeployment
