--- a/simulation-environment-entrypoint.yml
+++ b/simulation-environment-entrypoint.yml
@@ -11,11 +11,23 @@ _pool: &program
       - type: RunCollektiveProgram
         parameters: [collektive.exercises.EntrypointKt.entrypoint]
 
+# simple network
 deployments:
-  - type: Grid
-    parameters: [0, 0, 20, 20, 1, 1, 0.3, 0.3]
+  - type: GraphStreamDeployment
+    parameters: [15, 2, 0, PreferentialAttachment]
     programs:
       - *program
+    contents:
+      - molecule: isSource
+        concentration: true
+
+
+# complex network: grid of 20x20
+#deployments:
+#  - type: Grid
+#    parameters: [0, 0, 20, 20, 1, 1, 0.3, 0.3]
+#    programs:
+#      - *program
 
 monitors:
   type: SwingGUI
