--- a/simulation-environment.yml
+++ b/simulation-environment.yml
@@ -11,6 +11,18 @@ _pool: &program
       - type: RunCollektiveProgram
         parameters: [collektive.exercises.EntrypointKt.entrypoint]
 
+# simple network
+#deployments:
+#  - type: GraphStreamDeployment
+#    parameters: [15, 2, 0, PreferentialAttachment]
+#    programs:
+#      - *program
+#    contents:
+#      - molecule: isSource
+#        concentration: true
+
+
+# complex network: grid of 20x20
 deployments:
   - type: Grid
     parameters: [0, 0, 20, 20, 1, 1, 0.3, 0.3]
@@ -23,4 +35,5 @@ monitors:
     graphics: effects.json
 
 launcher:
-  auto-start: false
+  parameters:
+    autoStart: false
